--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="preload" href="Rossela-Demo.woff2" as="font" type="font/woff2"
+      crossorigin> -->
     <link rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
     <title>Vue.js Scaffold</title>
