--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin> -->
     <link rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
-    <title>Vue.js Scaffold</title>
+    <title>Vue artist</title>
   </head>
 
   <body>
